--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
-version: "3.8"
+version: '3'
+
 services:
-  app:
+  api-dev:
     build:
       context: .
-    volumes:
-      - .:/app
-      - /app/node_modules
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - ./src:/app/src
+    command: npm run start
