--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon main",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
